...
    if (picked != null) {
      setState(() {
        widget.startDate = picked;
      });
    }
    dateStyle = TextStyle(color: Colors.black, fontFamily: 'Montserrat');
    startDateInput = DateFormat('yyyy-MM-dd').format(widget.startDate);
  }

  Future<Null> selectEndDate(BuildContext context) async {
    final DateTime picked = await showDatePicker(
        context: context,
        initialDate: DateTime.now(),
...
    if (picked != null) {
      setState(() {
        widget.endDate = picked;
      });
    }
    dateStyle = TextStyle(color: Colors.black, fontFamily: 'Montserrat');
    endDateInput = DateFormat('yyyy-MM-dd').format(widget.endDate);
  }

  Future<String> createAlertDialog(BuildContext context) {
    titleController.text = "";
    descriptionController.text = "";
    startDateInput = "Select date ...";
...
        context: context,
        builder: (context) {
          return StatefulBuilder(builder: (context, setState) {
            return AlertDialog(
              title: Text("Create Board: "),
              content: Form(
                  key: _formKey,
                  child: SingleChildScrollView(
                    child: Column(
                      mainAxisSize: MainAxisSize.min,
                      key: Key('CreateColKey'),
                      children: <Widget>[
                        Container(
                          margin: EdgeInsets.all(10),
                          child: TextFormField(
                            controller: titleController,
                            key: Key('titleTextInput'),
                            validator: (val) =>
                                val.isEmpty ? 'Enter Board Title' : null,
                            decoration: InputDecoration(
                                //contentPadding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
                                hintText: "* Board Title",
                                border: OutlineInputBorder(
                                    borderRadius: BorderRadius.circular(32.0))),
                          ),
                        ),
                        Container(
                          margin: EdgeInsets.all(10),
                          child: TextFormField(
                            controller: descriptionController,
                            key: Key('descripTextInput'),
                            maxLines: 5,
                            decoration: InputDecoration(
                                //contentPadding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
                                hintText: "Description",
                                border: OutlineInputBorder(
                                    borderRadius: BorderRadius.circular(32.0))),
...
                        )
                      ],
                    ),
                  )),
              actions: <Widget>[
                MaterialButton(
                  key: Key('createBoardInput'),
                  elevation: 5.0,
                  child: Text("Create"),
                  onPressed: () async {
                    boardTitle = titleController.text;
                    if (_formKey.currentState.validate()) {
                      Project_Board projectBoard = new Project_Board();
...
    );

    final plusButton = new Container(
      alignment: Alignment.bottomRight,

      child: MaterialButton(
        key: Key('plusButton'),
        onPressed: () async {
          await createAlertDialog(context);
        },
        color:
            //Colors.blueGrey
            Color(0xff009999),
...
        shape: CircleBorder(),
      ),
    );

    final noBoardsView = new Container(
      width: MediaQuery.of(context).size.width,
      key: Key('noBoardsView'),
      //height: MediaQuery.of(context).size.height,
      decoration: BoxDecoration(
        color: Colors.white,
      ),
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
...
      _isDeleted=true;
    }else if (user.boards.length==0){
      _isDeleted=true;
    }

    return Scaffold(
      key: Key('Scaffold'),
      appBar: AppBar(
        title: Text("Innovative Skyline"),
        backgroundColor: Color(0xff009999),
      ),
      body: _isDeleted == true
          ? noBoardsView:
...
              ),
            ),
            ListTile(
              title: Text('View Profile',
                  style: TextStyle(
                      color: Color(0xff009999), fontWeight: FontWeight.bold)),
              key: Key('profileButton'),
              onTap: () {
                if (user.userTypeID == 1) {
                  //Navigator.of(context).pop();
                  Navigator.push(
                    context,
                    MaterialPageRoute(builder: (context) => ViewStudentProfilePage()),
...
              },
            ),
            ListTile(
              title: Text('Archived Boards',
                  style: TextStyle(
                      color: Color(0xff009999), fontWeight: FontWeight.bold)),
              key: Key('archivedButton'),
              onTap: () async {
//                http.Client client =new http.Client();
                await archivedBoards.initializeDisplay(createClient);
                setState(() {
                  Navigator.of(context).pop();
                  Navigator.push(
...
                  //Navigator.pushNamed(context, '/Archived');
                });
              },
            ),
            ListTile(
              title: Text('Sign Out',
                  key: Key('signOutDrawerButton'),
                  style: TextStyle(
                      color: Color(0xff009999), fontWeight: FontWeight.bold)),
              onTap: () {
                signOut();
              },
            ),
...
                              alignment: Alignment.centerLeft,
                              margin: EdgeInsets.only(left: 20),
                              child: Text("Board Title:")),
                          Container(
                            margin: EdgeInsets.all(10),
                            child: TextFormField(
                              key: Key('ProjectTitleInput'),
                              controller: titleController,
                              decoration: InputDecoration(
                                  //contentPadding: EdgeInsets.fromLTRB(20.0, 15.0, 20.0, 15.0),
                                  //hintText: "* Board Title",
                                  border: OutlineInputBorder(
                                      borderRadius:
...
