...
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: new Text(message),
          actions: <Widget>[
            FlatButton(
              child: new Text("OK"),
              onPressed: () {
                if (SuccessUser && passwordMatch) {
                  Navigator.pushNamed(context, '/Home');
                } else {
                  Navigator.of(context).pop();
                }
...
